--- a/SqlBuilder/SqlBuilder.csproj
+++ b/SqlBuilder/SqlBuilder.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="INameResolver.cs" />
     <Compile Include="IPredicateFactory.cs" />
     <Compile Include="IQueryBuilder.cs" />
     <Compile Include="ISelectBuilder.cs" />
@@ -48,6 +49,8 @@
     <Compile Include="IWhereBuilder.cs" />
     <Compile Include="Parameter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QueryBuilder.cs" />
+    <Compile Include="SelectBuilder.cs" />
     <Compile Include="Sql.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
