--- a/SqlBuilder/SqlBuilder.csproj
+++ b/SqlBuilder/SqlBuilder.csproj
@@ -54,6 +54,7 @@
     <Compile Include="QueryBuilder.cs" />
     <Compile Include="SelectBuilder.cs" />
     <Compile Include="Sql.cs" />
+    <Compile Include="WhereBuilder.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
