--- a/SqlBuilder/SqlBuilder.csproj
+++ b/SqlBuilder/SqlBuilder.csproj
@@ -50,6 +50,7 @@
     <Compile Include="ISqlBuilder.cs" />
     <Compile Include="IWhereBuilder.cs" />
     <Compile Include="Parameter.cs" />
+    <Compile Include="PredicateFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueryBuilder.cs" />
     <Compile Include="SelectBuilder.cs" />
