--- a/UnitTest/UnitTest.csproj
+++ b/UnitTest/UnitTest.csproj
@@ -51,6 +51,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entities\Product.cs" />
+    <Compile Include="Entities\ProductTag.cs" />
+    <Compile Include="LowerSnameCaseNameResolverTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlTest.cs" />
     <Content Include="sql_files\create_table_product.sql">
