--- a/UnitTest/UnitTest.csproj
+++ b/UnitTest/UnitTest.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Entities\ProductTag.cs" />
     <Compile Include="LowerSnameCaseNameResolverTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SelectBuilderTest.cs" />
     <Compile Include="SqlTest.cs" />
     <Content Include="sql_files\create_table_product.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
