--- a/UnitTest/UnitTest.csproj
+++ b/UnitTest/UnitTest.csproj
@@ -53,8 +53,10 @@
   <ItemGroup>
     <Compile Include="Entities\Product.cs" />
     <Compile Include="Entities\ProductTag.cs" />
+    <Compile Include="FromBuilderTest.cs" />
     <Compile Include="LowerSnameCaseNameResolverTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QueryBuilderTest.cs" />
     <Compile Include="SelectBuilderTest.cs" />
     <Compile Include="SqlTest.cs" />
     <Content Include="sql_files\create_table_product.sql">
