--- a/UnitTest/UnitTest.csproj
+++ b/UnitTest/UnitTest.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Entities\ProductTag.cs" />
     <Compile Include="FromBuilderTest.cs" />
     <Compile Include="LowerSnameCaseNameResolverTest.cs" />
+    <Compile Include="PredicateFactoryTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueryBuilderTest.cs" />
     <Compile Include="SelectBuilderTest.cs" />
