--- a/UnitTest/UnitTest.csproj
+++ b/UnitTest/UnitTest.csproj
@@ -60,7 +60,7 @@
     <Compile Include="PredicateFactoryTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueryBuilderTest.cs" />
-    <Compile Include="SelectBuilderTest.cs" />
+    <Compile Include="ColumnsBuilderTest.cs" />
     <Compile Include="SqlTest.cs" />
     <Content Include="sql_files\create_table_product.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
