--- a/UnitTest/UnitTest.csproj
+++ b/UnitTest/UnitTest.csproj
@@ -54,7 +54,7 @@
     <Compile Include="Doubles\TestConnection.cs" />
     <Compile Include="Entities\Product.cs" />
     <Compile Include="Entities\ProductTag.cs" />
-    <Compile Include="FromBuilderTest.cs" />
+    <Compile Include="TablesBuilderTest.cs" />
     <Compile Include="LowerSnameCaseNameResolverTest.cs" />
     <Compile Include="OrderByTest.cs" />
     <Compile Include="PredicateFactoryTest.cs" />
