--- a/QBuild/QBuild.csproj
+++ b/QBuild/QBuild.csproj
@@ -50,7 +50,7 @@
     <Compile Include="Builders\IColumnsBuilder.cs" />
     <Compile Include="ISql.cs" />
     <Compile Include="Builders\ISqlBuilder.cs" />
-    <Compile Include="Builders\IWhereBuilder.cs" />
+    <Compile Include="Builders\IPredicateBuilder.cs" />
     <Compile Include="LowerSnakeCaseNameResolver.cs" />
     <Compile Include="Parameter.cs" />
     <Compile Include="Predicates\OperatorMap.cs" />
@@ -59,7 +59,7 @@
     <Compile Include="Builders\QueryBuilder.cs" />
     <Compile Include="Builders\ColumnsBuilder.cs" />
     <Compile Include="Sql.cs" />
-    <Compile Include="Builders\WhereBuilder.cs" />
+    <Compile Include="Builders\PredicateBuilder.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
