--- a/QBuild/QBuild.csproj
+++ b/QBuild/QBuild.csproj
@@ -44,11 +44,13 @@
     <Compile Include="Builders\ITablesBuilder.cs" />
     <Compile Include="Builders\IOrderByBuilder.cs" />
     <Compile Include="Builders\OrderByBuilder.cs" />
+    <Compile Include="Expressions\ConstantExpressionParser.cs" />
+    <Compile Include="Expressions\ExpressionParser.cs" />
+    <Compile Include="Expressions\PropertyExpressionParser.cs" />
     <Compile Include="INameResolver.cs" />
-    <Compile Include="Predicates\BinaryPredicateExpressionParser.cs" />
-    <Compile Include="Predicates\IPredicateExpressionParser.cs" />
-    <Compile Include="Predicates\IOperatorResolver.cs" />
-    <Compile Include="Predicates\IPredicateFactory.cs" />
+    <Compile Include="Expressions\BinaryExpressionParser.cs" />
+    <Compile Include="Expressions\IExpressionParser.cs" />
+    <Compile Include="Expressions\IOperatorResolver.cs" />
     <Compile Include="Builders\IQueryBuilder.cs" />
     <Compile Include="Builders\IColumnsBuilder.cs" />
     <Compile Include="ISql.cs" />
@@ -56,14 +58,14 @@
     <Compile Include="Builders\IPredicateBuilder.cs" />
     <Compile Include="LowerSnakeCaseNameResolver.cs" />
     <Compile Include="Parameter.cs" />
-    <Compile Include="Predicates\OperatorResolver.cs" />
-    <Compile Include="Predicates\PredicateFactory.cs" />
+    <Compile Include="Expressions\OperatorResolver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Builders\QueryBuilder.cs" />
     <Compile Include="Builders\ColumnsBuilder.cs" />
     <Compile Include="Sql.cs" />
     <Compile Include="Builders\PredicateBuilder.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
