--- a/UnitTest/UnitTest.csproj
+++ b/UnitTest/UnitTest.csproj
@@ -54,11 +54,10 @@
     <Compile Include="Doubles\TestConnection.cs" />
     <Compile Include="Entities\Product.cs" />
     <Compile Include="Entities\ProductTag.cs" />
-    <Compile Include="Predicates\BinaryExpressionParserTest.cs" />
+    <Compile Include="Expressions\BinaryExpressionParserTest.cs" />
     <Compile Include="TablesBuilderTest.cs" />
     <Compile Include="LowerSnameCaseNameResolverTest.cs" />
     <Compile Include="OrderByTest.cs" />
-    <Compile Include="PredicateFactoryTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueryBuilderTest.cs" />
     <Compile Include="ColumnsBuilderTest.cs" />
