--- a/QBuild/QBuild.csproj
+++ b/QBuild/QBuild.csproj
@@ -45,7 +45,7 @@
     <Compile Include="Builders\IOrderByBuilder.cs" />
     <Compile Include="Builders\OrderByBuilder.cs" />
     <Compile Include="Expressions\ConstantExpressionParser.cs" />
-    <Compile Include="Expressions\ExpressionParser.cs" />
+    <Compile Include="Expressions\TypedExpressionParser.cs" />
     <Compile Include="Expressions\PropertyExpressionParser.cs" />
     <Compile Include="INameResolver.cs" />
     <Compile Include="Expressions\BinaryExpressionParser.cs" />
