predicate parser added

--- a/QBuild/QBuild.csproj
+++ b/QBuild/QBuild.csproj
@@ -45,6 +45,8 @@
     <Compile Include="Builders\IOrderByBuilder.cs" />
     <Compile Include="Builders\OrderByBuilder.cs" />
     <Compile Include="Expressions\ConstantExpressionParser.cs" />
+    <Compile Include="Expressions\IPredicateParser.cs" />
+    <Compile Include="Expressions\PredicateParser.cs" />
     <Compile Include="Expressions\TypedExpressionParser.cs" />
     <Compile Include="Expressions\PropertyExpressionParser.cs" />
     <Compile Include="INameResolver.cs" />
