Simple negetion supported

--- a/QBuild/QBuild.csproj
+++ b/QBuild/QBuild.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Expressions\IPredicateParser.cs" />
     <Compile Include="Expressions\PredicateParser.cs" />
     <Compile Include="Expressions\PropertyExpressionParser.cs" />
+    <Compile Include="Expressions\NotExpressionParser.cs" />
     <Compile Include="INameResolver.cs" />
     <Compile Include="Expressions\BinaryExpressionParser.cs" />
     <Compile Include="Expressions\IExpressionParser.cs" />
