--- a/QBuild/QBuild.csproj
+++ b/QBuild/QBuild.csproj
@@ -44,7 +44,9 @@
     <Compile Include="Builders\ITablesBuilder.cs" />
     <Compile Include="Builders\IOrderByBuilder.cs" />
     <Compile Include="Builders\OrderByBuilder.cs" />
+    <Compile Include="Expressions\BinaryOperationParser.cs" />
     <Compile Include="Expressions\ConstantExpressionParser.cs" />
+    <Compile Include="Expressions\IOperationParser.cs" />
     <Compile Include="Expressions\IParserLookup.cs" />
     <Compile Include="Expressions\IPredicateParser.cs" />
     <Compile Include="Expressions\ParserLookup.cs" />
@@ -54,7 +56,6 @@
     <Compile Include="INameResolver.cs" />
     <Compile Include="Expressions\BinaryExpressionParser.cs" />
     <Compile Include="Expressions\IExpressionParser.cs" />
-    <Compile Include="Expressions\IOperatorResolver.cs" />
     <Compile Include="Builders\IQueryBuilder.cs" />
     <Compile Include="Builders\IColumnsBuilder.cs" />
     <Compile Include="ISql.cs" />
@@ -62,7 +63,6 @@
     <Compile Include="Builders\IPredicateBuilder.cs" />
     <Compile Include="LowerSnakeCaseNameResolver.cs" />
     <Compile Include="Parameter.cs" />
-    <Compile Include="Expressions\OperatorResolver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Builders\QueryBuilder.cs" />
     <Compile Include="Builders\ColumnsBuilder.cs" />
