--- a/QBuild/QBuild.csproj
+++ b/QBuild/QBuild.csproj
@@ -40,7 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Builders\SingleTableQueryBuilder.cs" />
+    <Compile Include="Builders\TableQBuilder.cs" />
     <Compile Include="Builders\TablesBuilder.cs" />
     <Compile Include="Builders\ITablesBuilder.cs" />
     <Compile Include="Builders\IOrderByBuilder.cs" />
