predicate parser changed to lambda parser

--- a/QBuild/QBuild.csproj
+++ b/QBuild/QBuild.csproj
@@ -49,10 +49,10 @@
     <Compile Include="Expressions\ConstantExpressionParser.cs" />
     <Compile Include="Expressions\IOperationParser.cs" />
     <Compile Include="Expressions\IParserLookup.cs" />
-    <Compile Include="Expressions\IPredicateParser.cs" />
+    <Compile Include="Expressions\ILambdaParser.cs" />
     <Compile Include="Expressions\NullityExpressionParser.cs" />
     <Compile Include="Expressions\ParserLookup.cs" />
-    <Compile Include="Expressions\PredicateParser.cs" />
+    <Compile Include="Expressions\LambdaParser.cs" />
     <Compile Include="Expressions\PropertyExpressionParser.cs" />
     <Compile Include="INameResolver.cs" />
     <Compile Include="Expressions\BinaryExpressionParser.cs" />
