renamed Sql to clause

--- a/QBuild/QBuild.csproj
+++ b/QBuild/QBuild.csproj
@@ -46,7 +46,7 @@
     <Compile Include="Builders\IOrderByBuilder.cs" />
     <Compile Include="Builders\OrderByBuilder.cs" />
     <Compile Include="Expressions\UnaryExpressionParser.cs" />
-    <Compile Include="Sqls\CompositeSql.cs" />
+    <Compile Include="Clauses\CompositeClause.cs" />
     <Compile Include="Expressions\BinaryOperationParser.cs" />
     <Compile Include="Expressions\ConstantExpressionParser.cs" />
     <Compile Include="Expressions\IOperationParser.cs" />
@@ -61,14 +61,14 @@
     <Compile Include="Expressions\IExpressionParser.cs" />
     <Compile Include="Builders\IQueryBuilder.cs" />
     <Compile Include="Builders\IColumnsBuilder.cs" />
-    <Compile Include="Sqls\ISql.cs" />
+    <Compile Include="Clauses\IClause.cs" />
     <Compile Include="Builders\ISqlBuilder.cs" />
     <Compile Include="LowerSnakeCaseNameResolver.cs" />
     <Compile Include="Parameter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Builders\QueryBuilder.cs" />
     <Compile Include="Builders\ColumnsBuilder.cs" />
-    <Compile Include="Sqls\Sql.cs" />
+    <Compile Include="Clauses\Clause.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
