--- a/QBuild/QBuild.csproj
+++ b/QBuild/QBuild.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Builders\ITablesBuilder.cs" />
     <Compile Include="Builders\IOrderByBuilder.cs" />
     <Compile Include="Builders\OrderByBuilder.cs" />
+    <Compile Include="Clauses\Clause.cs" />
     <Compile Include="Expressions\UnaryExpressionParser.cs" />
     <Compile Include="Clauses\CompositeClause.cs" />
     <Compile Include="Expressions\BinaryOperationParser.cs" />
@@ -68,7 +69,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Builders\QueryBuilder.cs" />
     <Compile Include="Builders\ColumnsBuilder.cs" />
-    <Compile Include="Clauses\Clause.cs" />
+    <Compile Include="Clauses\MutableClause.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
