--- a/QBuild/QBuild.csproj
+++ b/QBuild/QBuild.csproj
@@ -46,8 +46,9 @@
     <Compile Include="Builders\IOrderByBuilder.cs" />
     <Compile Include="Builders\OrderByBuilder.cs" />
     <Compile Include="Clauses\Clause.cs" />
+    <Compile Include="Clauses\SelectClause.cs" />
     <Compile Include="Expressions\UnaryExpressionParser.cs" />
-    <Compile Include="Clauses\CompositeClause.cs" />
+    <Compile Include="Clauses\SeparatedClause.cs" />
     <Compile Include="Expressions\BinaryOperationParser.cs" />
     <Compile Include="Expressions\ConstantExpressionParser.cs" />
     <Compile Include="Expressions\IOperationParser.cs" />
@@ -61,14 +62,12 @@
     <Compile Include="Expressions\BinaryExpressionParser.cs" />
     <Compile Include="Expressions\IExpressionParser.cs" />
     <Compile Include="Builders\IQueryBuilder.cs" />
-    <Compile Include="Builders\IColumnsBuilder.cs" />
     <Compile Include="Clauses\IClause.cs" />
     <Compile Include="Builders\ISqlBuilder.cs" />
     <Compile Include="LowerSnakeCaseNameResolver.cs" />
     <Compile Include="Parameter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Builders\QueryBuilder.cs" />
-    <Compile Include="Builders\ColumnsBuilder.cs" />
     <Compile Include="Clauses\MutableClause.cs" />
   </ItemGroup>
   <ItemGroup />
