--- a/UnitTest/UnitTest.csproj
+++ b/UnitTest/UnitTest.csproj
@@ -58,7 +58,7 @@
     <Compile Include="Expressions\NullityExpressionParserTest.cs" />
     <Compile Include="Clauses\SeparatedClauseTest.cs" />
     <Compile Include="LowerSnameCaseNameResolverTest.cs" />
-    <Compile Include="OrderByTest.cs" />
+    <Compile Include="Clauses\OrderByClauseTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Builders\QueryBuilderTest.cs" />
     <Compile Include="Clauses\SelectClauseTest.cs" />
