--- a/QBuild/QBuild.csproj
+++ b/QBuild/QBuild.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Builders\ClauseFactory.cs" />
     <Compile Include="Builders\TableQBuilder.cs" />
     <Compile Include="Clauses\Clause.cs" />
     <Compile Include="Clauses\LambdaClause.cs" />
