where clause renamed to predicate clause

--- a/QBuild/QBuild.csproj
+++ b/QBuild/QBuild.csproj
@@ -49,7 +49,7 @@
     <Compile Include="Clauses\GroupByClause.cs" />
     <Compile Include="Clauses\OrderByClause.cs" />
     <Compile Include="Clauses\SelectClause.cs" />
-    <Compile Include="Clauses\WhereClause.cs" />
+    <Compile Include="Clauses\PredicateClause.cs" />
     <Compile Include="Expressions\UnaryExpressionParser.cs" />
     <Compile Include="Clauses\SeparatedClause.cs" />
     <Compile Include="Expressions\BinaryOperationParser.cs" />
