context applied to parsing.

--- a/QBuild/QBuild.csproj
+++ b/QBuild/QBuild.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Builders\ClauseFactory.cs" />
     <Compile Include="Builders\LambdaQueryBuilder.cs" />
     <Compile Include="Clauses\Clause.cs" />
+    <Compile Include="Clauses\ClauseContext.cs" />
     <Compile Include="Clauses\DelegatedClause.cs" />
     <Compile Include="Clauses\LambdaClause.cs" />
     <Compile Include="Clauses\FromClause.cs" />
