--- a/QBuild/QBuild.csproj
+++ b/QBuild/QBuild.csproj
@@ -51,17 +51,19 @@
     <Compile Include="Clauses\OrderByClause.cs" />
     <Compile Include="Clauses\SelectClause.cs" />
     <Compile Include="Clauses\PredicateClause.cs" />
+    <Compile Include="Expressions\ILambdaResolver.cs" />
+    <Compile Include="Expressions\LambdaResolver.cs" />
+    <Compile Include="Expressions\MethodCallExpressionParser.cs" />
     <Compile Include="Expressions\UnaryExpressionParser.cs" />
     <Compile Include="Clauses\SeparatedClause.cs" />
     <Compile Include="Expressions\BinaryOperationParser.cs" />
     <Compile Include="Expressions\ConstantExpressionParser.cs" />
     <Compile Include="Expressions\IOperationParser.cs" />
     <Compile Include="Expressions\IParserLookup.cs" />
-    <Compile Include="Expressions\ILambdaParser.cs" />
     <Compile Include="Expressions\NullityExpressionParser.cs" />
     <Compile Include="Expressions\ParserLookup.cs" />
-    <Compile Include="Expressions\LambdaParser.cs" />
     <Compile Include="Expressions\PropertyExpressionParser.cs" />
+    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="NameResolvers\AsIsNameResolver.cs" />
     <Compile Include="NameResolvers\INameResolver.cs" />
     <Compile Include="Expressions\BinaryExpressionParser.cs" />
