--- a/QBuild/QBuild.csproj
+++ b/QBuild/QBuild.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Clauses\OrderByClause.cs" />
     <Compile Include="Clauses\SelectClause.cs" />
     <Compile Include="Clauses\PredicateClause.cs" />
+    <Compile Include="Expressions\FunctionParser.cs" />
     <Compile Include="Expressions\ILambdaResolver.cs" />
     <Compile Include="Expressions\LambdaResolver.cs" />
     <Compile Include="Expressions\MethodCallExpressionParser.cs" />
