--- a/QBuild/QBuild.csproj
+++ b/QBuild/QBuild.csproj
@@ -51,11 +51,11 @@
     <Compile Include="Clauses\OrderByClause.cs" />
     <Compile Include="Clauses\SelectClause.cs" />
     <Compile Include="Clauses\PredicateClause.cs" />
-    <Compile Include="Expressions\FunctionNameLookup.cs" />
-    <Compile Include="Expressions\IFunctionNameLookup.cs" />
     <Compile Include="Expressions\ILambdaResolver.cs" />
+    <Compile Include="Expressions\ISqlFunctionNameResolver.cs" />
     <Compile Include="Expressions\LambdaResolver.cs" />
     <Compile Include="Expressions\MethodCallExpressionParser.cs" />
+    <Compile Include="Expressions\SqlFunctionNameResolver.cs" />
     <Compile Include="Expressions\UnaryExpressionParser.cs" />
     <Compile Include="Clauses\SeparatedClause.cs" />
     <Compile Include="Expressions\BinaryOperationParser.cs" />
