File name fixed. SqlFunctions excluded from test coverage.

--- a/QBuild/QBuild.csproj
+++ b/QBuild/QBuild.csproj
@@ -66,7 +66,7 @@
     <Compile Include="Expressions\NullityExpressionParser.cs" />
     <Compile Include="Expressions\ParserLookup.cs" />
     <Compile Include="Expressions\PropertyExpressionParser.cs" />
-    <Compile Include="Functions\FunctionFactory.cs" />
+    <Compile Include="Functions\SqlFunctions.cs" />
     <Compile Include="NameResolvers\AsIsNameResolver.cs" />
     <Compile Include="NameResolvers\INameResolver.cs" />
     <Compile Include="Expressions\BinaryExpressionParser.cs" />
